fix banner size image on firefox browser

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-position: top center;
   width: 100%;
-  min-height: 500px;
+  height: 500px;
   display: table;
   .banner_content {
     display: table-cell;
